# KeyboardTrainerPython

./: README.md  app.py  controller.py  main.py  model.py  my_timer.py  pyproject.toml  text_speed_test.txt  view.py  write_my_text.py
