[tool.poetry]
name = "keyboardtrainerpython"
version = "0.1.0"
description = ""
authors = ["k-o-pshenichnikova <k.o.pshenichnikova@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.0.2"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
